--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "src/scss/material-theme.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/scss/styles.scss"
             ],
