--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/scss/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/alertifyjs/build/alertify.min.js"
+            ]
           },
           "configurations": {
             "production": {
