--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^5.1.0",
     "electron": "^14.0.0",
     "firebase": "^9.0.1",
