--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron": "electron ."
+    "electron": "ng build --base-href ./ && node ./setup-electron.js  && tsc --p electron && electron electron/dist/main.js"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +29,7 @@
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.1.0",
     "electron": "^14.0.0",
+    "express": "^4.17.1",
     "firebase": "^9.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "~12.1.4",
     "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.0",
+    "@types/express": "^4.17.13",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
