--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,9 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
-          "strict": true
+          "strict": true,
+          "style": "scss",
+          "skipTests": true
         }
       },
       "root": "",
