--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "electron": "^14.0.0",
     "express": "^4.17.1",
     "firebase": "^9.0.1",
+    "js-search": "^2.0.0",
+    "lodash": "^4.17.21",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
