--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.1.0",
     "@angular/material": "^12.2.4",
+    "@angular/material-moment-adapter": "^12.2.5",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
@@ -35,7 +36,9 @@
     "firebase": "^9.0.1",
     "js-search": "^2.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
+    "ngx-material-timepicker": "^5.5.3",
     "path-browserify": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
