--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-material-timepicker": "^5.5.3",
+    "ngx-smart-popover": "^1.4.0",
     "path-browserify": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
