--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron": "ng build --base-href ./ && node ./setup-electron.js  && tsc --p electron && electron electron/dist/main.js"
+    "electron:start:fast": "node ./setup-electron.js && node ./setup-cloud-storage-scripts.js && tsc --p electron && electron electron/dist/main.js",
+    "electron": "ng build && node ./setup-electron.js && node ./setup-cloud-storage-scripts.js && tsc --p electron && electron electron/dist/main.js"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,7 @@
     "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.1.0",
     "@angular/material": "^12.2.4",
+    "@angular/material-moment-adapter": "^12.2.5",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
@@ -33,12 +35,18 @@
     "electron": "^14.0.0",
     "express": "^4.17.1",
     "firebase": "^9.0.1",
+    "firebase-admin": "^9.11.1",
     "js-search": "^2.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
+    "node-cron": "^3.0.0",
+    "ngx-material-timepicker": "^5.5.3",
+    "ngx-smart-popover": "^1.4.0",
     "path-browserify": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
